<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/ConstraintLayout_main"
        android:background="@color/colorPrimary">
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/ConstraintLayout_title"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_rounded_corners">
        <TextView
                android:text="@string/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:textAlignment="center" android:textSize="38sp"
                android:textStyle="bold" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp" android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/ConstraitLayout_inner"
            android:background="@drawable/layout_rounded_corners"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout_title"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/editText_searchCity"
                app:layout_constraintHorizontal_bias="0.5"
                android:inputType="text"
                android:textAlignment="viewStart" android:textSize="30sp"
                android:hint="@string/editText_searchCity_hint"
                android:background="@drawable/edittext_search_background"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_instruction" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton_getLocation" android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/textView_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_message" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_searchCity"
                app:layout_constraintStart_toStartOf="@+id/editText_searchCity"
                android:textSize="18sp" app:layout_constraintEnd_toEndOf="@+id/editText_searchCity"
                android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
        <Button
                android:text="@string/button_search"
                android:layout_width="240sp"
                android:layout_height="60sp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/button_search"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="86dp"
                android:background="@drawable/button_search"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_instruction"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/editText_searchCity" android:layout_marginStart="2dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@android:color/black" android:layout_marginTop="64dp"
                android:text="@string/textView_instruction" android:textAllCaps="true"/>
        <ImageButton
                app:srcCompat="@android:drawable/ic_menu_mylocation"
                android:id="@+id/imageButton_getLocation"
                android:scaleType="center"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                style="@android:style/Widget.DeviceDefault.ImageButton" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="@+id/editText_searchCity"
                android:contentDescription="@string/imageButton"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>